# Super-Value

./: .env.example  .gitignore  CLAUDE.md  VALUE_BOT_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  settings.py
docs/: EDGE_IMPROVEMENTS.md
engine/: __init__.py  consensus.py  ki_adjust.py  novig.py  parlay.py  types.py  value.py
tests/engine/: test_consensus.py  test_ki_adjust.py  test_novig.py  test_parlay.py  test_value.py
