[project]
name = "value-bot"
version = "0.1.0"
description = "Value-Detection-Bot für Sportwetten (yeet.com vs. Sharp-Linie). Nur Signale, keine Wetten."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # Zeilenlänge prüft der Formatter

[tool.ruff.lint.isort]
known-first-party = ["config", "engine", "sources", "normalize", "alerts", "storage", "scheduler", "backtest"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
files = ["engine", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
